Replaced caffine.mol with ala-gly.mol (ALA-GLY) as the default file to provide a relevant data example.

--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@ var Info = {
 	jarPath: "./java",// this needs to point to where the java directory is.
 	jarFile: "JmolAppletSigned.jar",
 	isSigned: true,
-	script: "set zoomlarge false;set antialiasDisplay;load data/caffeine.mol;set spin on",
+	script: "set zoomlarge false;set antialiasDisplay;load data/ala-gly.mol;set spin on",
 	serverURL: "https://chemapps.stolaf.edu/jmol/jsmol/php/jsmol.php",
 	readyFunction: jmol_isReady,
 	disableJ2SLoadMonitor: true,
