--- a/main.html
+++ b/main.html
@@ -118,9 +118,10 @@ function update_rama() {
     context.closePath();
   
     // Draw horizontal line
+    // y axis needs to be inverted 
     context.beginPath();  
-    context.moveTo(0, 180+psi);
-    context.lineTo(360, 180+psi);
+    context.moveTo(0, 180+(-1*psi));
+    context.lineTo(360, 180+(-1*psi));
     context.stroke();
     context.closePath();
   
