--- a/main3.html
+++ b/main3.html
@@ -405,11 +405,13 @@
       </div>
 
       <div id="TabA" class="tabcontent">
-	<p>This is the text inside of Tab A, EDIT THIS.</p>
+	<p><emsp>This is a simulation of an amino acid and its respective Ramachandran plot. The rotations of
+	the dihedral angles can be changed by pressing the buttons on the right of the 3D simulations. Any changes made to the angle will also be made on the Ramachandran plot to the left of the simulation. The intersection of the black lines identifies the position on the plot the rotations are currently corresponding to. The white area being points of overlap and instability and the grey colored zones being possible conformations of the molecule. The large yellow to red discs identify that there is an overlap in the atoms. The larger the circle the more cross-sectional overlap and the color will get darker. Thus, the optimal orientation is with the smallest circles which represent little to no overlap of atoms in the molecule. We hope that this will help the user visualize the Ramachandran plot more effectively!
+	</p>
       </div>
 
       <div id="TabB" class="tabcontent">
-	<p>This is the text inside of Tab B, EDIT THIS.</p> 
+	<p><emsp>Proteins are one of the fundamental biomolecules in biochemistry and important to fully comprehend in various fields. All proteins produce a recurring shape when they begin to fold after forming a long chain of amino acids. These shapes are an alpha helix (a spiral) or a beta sheet (a zig zag pattern). When trying to study the reason behind proteins making these shapes G.N. Ramachandran made a simple computational experiment which made the first Ramachandran plot. In the experiment every combination of degree change of the dihedral angles (represented by phi and psi) was tested to check if the atoms in the molecule were overlapping. The overlap of atoms is very unstable and thus it is unfavorable for a molecule to conform that way. Thus, in the Ramachandran plot there are various dark points which indicate the presence of an agreeable conformation for the molecule to take. This was a historic discovery for not only explaining a prevalent phenomenon but also with a simple solution.</p> 
       </div>
 
       <div id="TabC" class="tabcontent">
